--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ lerna-debug.log*
 
 node_modules
 dist
+dist-electron
 dist-ssr
 *.local
 *.cpuprofile
@@ -26,3 +27,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# python venv
+.venv
