--- a/package.json
+++ b/package.json
@@ -2,12 +2,30 @@
   "name": "datapack-map",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "main.js",
   "scripts": {
     "dev": "vite --force --host",
     "createZips": "python scripts/createVanillaZips.py",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "electron:dev": "vite build && electron .",
+    "electron:build": "vite build && electron-builder --win --x64"
+  },
+  "build": {
+    "appId": "com.example.mc-datapack-map",
+    "productName": "MC Datapack Map",
+    "files": [
+      "dist/**/*",
+      "main.js",
+      "preload.js"
+    ],
+    "directories": {
+      "buildResources": "build"
+    },
+    "win": {
+      "target": "portable",
+      "icon": "build/icon.ico"
+    }
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -29,9 +47,13 @@
     "@types/node": "^20.3.1",
     "@types/wicg-file-system-access": "^2020.9.6",
     "@vitejs/plugin-vue": "^4.2.3",
+    "electron": "^32.1.1",
+    "electron-builder": "^25.0.5",
+    "electron-vite": "^2.3.0",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
+    "vite-plugin-electron": "^0.28.7",
     "vite-plugin-pwa": "^0.16.4",
-    "vue-tsc": "^1.8.1"
+    "vue-tsc": "^2.1.6"
   }
 }
